# fastapi-python

./: .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml  readme.md  requirements.txt
migrations/: env.py  readme.md
migrations/versions/: 32fc730e1667_updated_fields.py  415fdbe85bb5_initial_migration.py  451037d920fb_reviews_model.py  4c998eba493d_relation_user_to_books.py  a325ff7423fb_initial_migration.py  b2da5499a0c5_initial_migration.py  ceb25a5f8d76_updated_fields.py  e78d3d86dff0_updated_model.py
src/: app.py  config.py  middleware.py
src/auth/: routes.py  schemas.py  services.py
src/books/: routes.py  schemas.py  services.py
src/db/: main.py  models.py  redis.py
src/lib/: dependencies.py  errors.py  middlewares.py  response.py  utils.py
src/reviews/: routes.py  schemas.py  services.py
src/tags/: routes.py  schemas.py
