[project]
name = "fastapi-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "itsdangerous>=2.2.0",
    "jwt>=1.3.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
